static/main.css
/* 
 * Some bits borrowed from
 * http://meyerweb.com/eric/tools/css/reset/ 
 * v2.0 | 20110126
 */

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
  display: block;
}
a {
  color: #000;
  text-decoration: none;
}
body {
  font-family: "Droid Sans", sans-serif;
  font-size: 18px;
  line-height: 1;
}
ol, ul {
  list-style: none;
}
blockquote, q {
  quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
  content: '';
  content: none;
}
button, input[type=button] {
  cursor: pointer;
}
label {
  display: block;
  margin: 14px 0 0 0;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}
.logo {
  font-size: 32px;
  line-height: 32px;
}
header {
  overflow: hidden;
}
header a {
  color: #000;
}
input[type=datetime],
input[type=email],
input[type=password],
input[type=search],
input[type=text],
input[type=url],
textarea {
  display: block;
  width: 100%;
}
input[type=date],
input[type=email],
input[type=search],
input[type=text],
input[type=url],
textarea {
  font-family: monospace;
}
input[type=checkbox] {
  vertical-align: middle;
}
input[type=submit], input[type=button] {
  cursor: pointer;
  font-family: inherit;
  font-size: 14px;
}
input[type=time] {
  margin-left: 10px;
}
textarea {
}
.action {
  background-color: #ddd;
  border: none;
  margin: 0 0 0 5px;
  padding: 5px 7px;
}
.alert {
  color: red;
  margin: 10px 0 0 0;
}
.checkbox {
  margin: 10px 0 0 0;
}
.checkbox-box {
  margin: 14px 0 0 0;
}
.count {
  font-size: smaller;
  margin: 5px 0 4px;
}
.sort {
  font-size: smaller;
}
.sort a {
  color: #777;
}
.sort a[href] {
  color: #000;
}
.actions {
  float: right;
  margin: 10px 0;
}
.actions ul {
  position: absolute;
  margin: 10px 0 0 -26px;
  text-align: right;
}
.hit {
  margin: 20px 0;
}
.hit div {
  font-size: 16px;
}
.immutable {
  padding: 10px 0 0 0;
}
.immutable span {
  color: #777;
}
.for-check {
  display: inline-block;
  margin: 0 10px 0 0;
}
.item {
  display: block;
  margin: 20px 0 0 0;
  transition: opacity .5s ease;
  -webkit-transition: opacity .5s ease;
}
.item-type {
  color: #777;
}
.item.not-selected {
  opacity: 0;
}
.item div {
  font-size: 17px;
  line-height: 20px;
}
.item form {
  margin: 16px 6px 0 0;
}
.item h3 {
  font-size: 20px;
  line-height: 26px;
}
.form-field {
  padding: 10px 0 0 0;
}
.public {
  display: block;
  float: right;
  font-size: 14px;
}
.rels {
  font-size: 14px;
  position: relative;
}
.rels a {
  font-family: monospace;
  font-size: 13px;
}
.rels button {
  background: transparent;
  border: none;
}
.rels .fa-link {
  margin: -17px 0 0 0;
  position: absolute;
  right: 6px;
}
.rels .linked {
  margin: 0 0 6px 0;
}
.search input {
  font-size: 24px;
}
.submit {
  margin: 0 0 0 10px;
}
.typeahead {
  background: #fff;
  border: 1px solid #bbb;
  margin-top: 1px;
  position: absolute;
  width: 100%;
  z-index: 10;
}
.typeahead .highlight {
  background: #ddd;
}
.types {
  margin: 10px 0 20px;
}
.user {
  float: right;
  font-size: 20px;
  margin: 6px 0 0 0;
}
.logout {
  color: #777;
}
#raw {
  background: #111;
  color: #eee;
  display: none;
  font-family: monospace;
  padding: 40px 10px 20px;
  white-space: pre-wrap;
  word-break: break-all;
}
#raw-toggle {
  color: #777;
  margin: 40px 0 0 0;
  font-size: smaller;
}
#raw-toggle span:hover {
  cursor: pointer;
  color: #333;
}
#q {
  background: #fff;
}
.rel-add input {
  width: 20%;
}

